--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -1,7 +1,3 @@
-# Neofetch config file
-# https://github.com/dylanaraps/neofetch
-
-
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
@@ -17,29 +13,28 @@ print_info() {
     info "Resolution" resolution
     info "DE" de
     info "WM" wm
-    info "WM Theme" wm_theme
+    # info "WM Theme" wm_theme
     # info "Theme" theme
     # info "Icons" icons
     info "Terminal" term
-    info "Terminal Font" term_font
+    # info "Terminal Font" term_font
     info "CPU" cpu
     info "CPU Usage" cpu_usage
     info "GPU" gpu
-    info "GPU Driver" gpu_driver  # Linux only
-    # info "Battery" battery
+    info "GPU Driver" gpu_driver  # Linux/macOS only
+    info "Memory" memory
+
+    info "Disk" disk
+    info "Battery" battery
     # info "Font" font
     # info "Song" song
+    # [[ $player ]] && prin "Music Player" "$player"
     # info "Local IP" local_ip
     # info "Public IP" public_ip
     # info "Users" users
-    # info "Install Date" install_date
     info "Locale" locale  # This only works on glibc systems.
-    info "Disk" disk
-    info "Memory" memory
 
-    info line_break
     info cols
-    info line_break
 }
 
 
@@ -99,6 +94,37 @@ os_arch="on"
 uptime_shorthand="on"
 
 
+# Memory
+
+
+# Show memory pecentage in output.
+#
+# Default: 'off'
+# Values:  'on', 'off'
+# Flag:    --memory_percent
+#
+# Example:
+# on:   '1801MiB / 7881MiB (22%)'
+# off:  '1801MiB / 7881MiB'
+memory_percent="on"
+
+
+# Packages
+
+
+# Show/Hide Package Manager names.
+#
+# Default: 'tiny'
+# Values:  'on', 'tiny' 'off'
+# Flag:    --package_managers
+#
+# Example:
+# on:   '998 (pacman), 8 (flatpak), 4 (snap)'
+# tiny: '908 (pacman, flatpak, snap)'
+# off:  '908'
+package_managers="on"
+
+
 # Shell
 
 
@@ -141,7 +167,7 @@ speed_type="bios_limit"
 #
 # Default: 'off'
 # Values: 'on', 'off'.
-# Flag:    --speed_shorthand.
+# Flag:    --speed_shorthand
 # NOTE: This flag is not supported in systems with CPU speed less than 1 GHz
 #
 # Example:
@@ -250,7 +276,7 @@ gpu_type="all"
 # Example:
 # on:  '1920x1080 @ 60Hz'
 # off: '1920x1080'
-refresh_rate="off"
+refresh_rate="on"
 
 
 # Gtk Theme / Icons / Font
@@ -301,6 +327,13 @@ gtk3="on"
 # Flag:    --ip_host
 public_ip_host="http://ident.me"
 
+# Public IP timeout.
+#
+# Default: '2'
+# Values:  'int'
+# Flag:    --ip_timeout
+public_ip_timeout=2
+
 
 # Disk
 
@@ -321,7 +354,7 @@ public_ip_host="http://ident.me"
 # disk_show=('/'):
 #      'Disk (/): 74G / 118G (66%)'
 #
-disk_show=('/')
+disk_show=('/' '/dev/sdb1')
 
 # Disk subtitle.
 # What to append to the Disk subtitle.
@@ -347,7 +380,60 @@ disk_subtitle="mount"
 # Song
 
 
-# Print the Artist and Title on separate lines
+# Manually specify a music player.
+#
+# Default: 'auto'
+# Values:  'auto', 'player-name'
+# Flag:    --music_player
+#
+# Available values for 'player-name':
+#
+# amarok
+# audacious
+# banshee
+# bluemindo
+# clementine
+# cmus
+# deadbeef
+# deepin-music
+# dragon
+# elisa
+# exaile
+# gnome-music
+# gmusicbrowser
+# guayadeque
+# iTunes
+# juk
+# lollypop
+# mocp
+# mopidy
+# mpd
+# netease-cloud-music
+# pogo
+# pragha
+# qmmp
+# quodlibet
+# rhythmbox
+# sayonara
+# smplayer
+# spotify
+# tomahawk
+# vlc
+# xmms2d
+# yarock
+music_player="auto"
+
+# Format to display song information.
+#
+# Default: '%artist% - %album% - %title%'
+# Values:  '%artist%', '%album%', '%title%'
+# Flag:    --song_format
+#
+# Example:
+# default: 'Song: Jet - Get Born - Sgt Major'
+song_format="%artist% - %album% - %title%"
+
+# Print the Artist, Album and Title on separate lines
 #
 # Default: 'off'
 # Values:  'on', 'off'
@@ -355,36 +441,17 @@ disk_subtitle="mount"
 #
 # Example:
 # on:  'Artist: The Fratellis'
+#      'Album: Costello Music'
 #      'Song: Chelsea Dagger'
 #
-# off: 'Song: The Fratellis - Chelsea Dagger'
+# off: 'Song: The Fratellis - Costello Music - Chelsea Dagger'
 song_shorthand="off"
 
-
-# Install Date
-
-
-# Whether to show the time in the output
+# 'mpc' arguments (specify a host, password etc).
 #
-# Default:  'on'
-# Values:   'on', 'off'
-# Flag:     --install_time
-#
-# Example:
-# on:  'Thu 14 Apr 2016 11:50 PM'
-# off: 'Thu 14 Apr 2016'
-install_time="on"
-
-# Set time format in the output
-#
-# Default: '24h'
-# Values:  '12h', '24h'
-# Flag:    --install_time_format
-#
-# Example:
-# 12h: 'Thu 14 Apr 2016 11:50 PM'
-# 24h: 'Thu 14 Apr 2016 23:50'
-install_time_format="12h"
+# Default:  ''
+# Example: mpc_args=(-h HOST -P PASSWORD)
+mpc_args=()
 
 
 # Text Colors
@@ -402,7 +469,7 @@ install_time_format="12h"
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(0 7 7 7 7 7)
+colors=(distro)
 
 
 # Text Options
@@ -428,6 +495,18 @@ underline_enabled="on"
 # Values:   'string'
 # Flag:     --underline_char
 underline_char="-"
+
+
+# Info Separator
+# Replace the default separator with the specified string.
+#
+# Default:  ':'
+# Flag:     --separator
+#
+# Example:
+# separator="->":   'Shell-> bash'
+# separator=" =":   'WM = dwm'
+separator=":"
 
 
 # Color Blocks
@@ -542,7 +621,8 @@ disk_display="off"
 # Image backend.
 #
 # Default:  'ascii'
-# Values:   'ascii', 'caca', 'catimg', 'jp2a', 'iterm2', 'off', 'tycat', 'w3m'
+# Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
+#           'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
 image_backend="w3m"
 
@@ -552,13 +632,13 @@ image_backend="w3m"
 #
 # Default:  'auto'
 # Values:   'auto', 'ascii', 'wallpaper', '/path/to/img', '/path/to/ascii', '/path/to/dir/'
+#           'command output (neofetch --ascii "$(fortune | cowsay -W 30)")'
 # Flag:     --source
 #
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source=".config/neofetch/archlinux.png"
-# image_source=".config/neofetch/P-003.png"
+image_source="/home/angel/.config/neofetch/P-003.png"
 
 
 # Ascii Options
@@ -577,7 +657,7 @@ image_source=".config/neofetch/archlinux.png"
 #       Change this to 'Lubuntu', 'Xubuntu', 'Ubuntu-GNOME' or 'Ubuntu-Budgie' to use the flavors.
 # NOTE: Arch, Crux and Gentoo have a smaller logo variant.
 #       Change this to 'arch_small', 'crux_small' or 'gentoo_small' to use the small logos.
-#ascii_distro="auto"
+ascii_distro="auto"
 
 # Ascii Colors
 #
@@ -625,7 +705,7 @@ thumbnail_dir="${XDG_CACHE_HOME:-${HOME}/.cache}/thumbnails/neofetch"
 #
 # See this wiki page to learn about the fit and fill options.
 # https://github.com/dylanaraps/neofetch/wiki/What-is-Waifu-Crop%3F
-crop_mode="fit"
+crop_mode="normal"
 
 # Crop offset
 # Note: Only affects 'normal' crop mode.
@@ -643,9 +723,9 @@ crop_offset="center"
 # Values:  'auto', '00px', '00%', 'none'
 # Flags:   --image_size
 #          --size
-image_size="43%"
+image_size="auto"
 
-# Ggap between image and text
+# Gap between image and text
 #
 # Default: '3'
 # Values:  'num', '-num'
@@ -671,51 +751,6 @@ xoffset=0
 background_color=
 
 
-# Scrot Options
-
-
-# Whether or not to always take a screenshot
-# You can manually take a screenshot with "--scrot" or "-s"
-#
-# Default: 'off'
-# Values:  'on', 'off'
-# Flags:   --scrot
-#          -s
-scrot="off"
-
-# Screenshot Program
-# Neofetch will automatically use whatever screenshot tool
-# is installed on your system.
-#
-# If 'neofetch -v' says that it couldn't find a screenshot
-# tool or you're using a custom tool then you can change
-# the option below to a custom command.
-#
-# Default: 'auto'
-# Values:  'auto' 'cmd -flags'
-# Flag:    --scrot_cmd
-scrot_cmd="auto"
-
-# Screenshot Filename
-# What to name the screenshots
-#
-# Default: 'neofetch-$(date +%F-%I-%M-%S-${RANDOM}).png'
-# Values:  'string'
-# Flag:    --scrot_name
-scrot_name="neofetch-$(date +%F-%I-%M-%S-${RANDOM}).png"
-
-# Image upload host
-# Where to upload the image.
-#
-# Default: 'teknik'
-# Values:  'imgur', 'teknik'
-# Flag:    --image_host
-#
-# NOTE: If you'd like another image host to be added to Neofetch.
-#       Open an issue on github.
-image_host="teknik"
-
-
 # Misc Options
 
 # Stdout mode
@@ -724,9 +759,3 @@ image_host="teknik"
 # Default: 'off'
 # Values: 'on', 'off'
 stdout="off"
-
-# Config version.
-#
-# NOTE: Don't change this value, neofetch reads this to determine
-# how to handle backwards compatibility.
-config_version="3.3.0"
