--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	name = Sofee
+	name = QingQiz
 	email = sofeeys@outlook.com
 [alias]
 	co = checkout
@@ -7,7 +7,7 @@
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 	unadd = reset HEAD
 	cm = commit
-[http]
-	proxy = socks5://127.0.0.1:1080
-[https]
-	proxy = socks5://127.0.0.1:1080
+# [http]
+	# proxy = socks5://127.0.0.1:1080
+# [https]
+	# proxy = socks5://127.0.0.1:1080
