--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -517,10 +517,10 @@ label-separator-foreground = ${colors.foreground-alt}
 
 menu-0-0 = power
 menu-0-0-exec = menu-open-1
-menu-0-1 = terminal
-menu-0-1-exec = termite &
-menu-0-2 = App
-menu-0-2-exec = menu-open-5
+; menu-0-1 = terminal
+; menu-0-1-exec = termite &
+; menu-0-2 = App
+; menu-0-2-exec = menu-open-5
 
 menu-1-0 = reboot
 menu-1-0-exec = menu-open-2
@@ -530,8 +530,8 @@ menu-1-2 = log out
 menu-1-2-exec = menu-open-4
 menu-1-3 = sleep
 menu-1-3-exec = systemctl suspend
-menu-1-4 = lock
-menu-1-4-exec = "betterlockscreen --lock &"
+; menu-1-4 = lock
+; menu-1-4-exec = "betterlockscreen --lock &"
 menu-1-5 = cancel
 menu-1-5-exec = menu-open-0
 
@@ -550,22 +550,22 @@ menu-4-0-exec = i3-msg exit
 menu-4-1 = cancel
 menu-4-1-exec = menu-open-0
 
-menu-5-0 = digikam
-menu-5-0-exec = digikam &
-menu-5-1 = GIMP
-menu-5-1-exec = gimp &
-menu-5-2 = Mathematica
-menu-5-2-exec = mathematica &
-menu-5-3 = NEMusic
-menu-5-3-exec = netease-cloud-music &
-menu-5-4 = Mail
-menu-5-4-exec = thunderbird &
-menu-5-5 = Eclipse
-menu-5-5-exec = eclipse &
-menu-5-6 = Emacs
-menu-5-6-exec = emacs &
-menu-5-7 = cancel
-menu-5-7-exec = menu-open-0
+; menu-5-0 = digikam
+; menu-5-0-exec = digikam &
+; menu-5-1 = GIMP
+; menu-5-1-exec = gimp &
+; menu-5-2 = Mathematica
+; menu-5-2-exec = mathematica &
+; menu-5-3 = NEMusic
+; menu-5-3-exec = netease-cloud-music &
+; menu-5-4 = Mail
+; menu-5-4-exec = thunderbird &
+; menu-5-5 = Eclipse
+; menu-5-5-exec = eclipse &
+; menu-5-6 = Emacs
+; menu-5-6-exec = emacs &
+; menu-5-7 = cancel
+; menu-5-7-exec = menu-open-0
 
 [module/alsa]
 type = internal/alsa
