--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,5 +1,5 @@
 # mod key
-# set $mod Mod4
+set $mod Mod4
 
 # fonts
 font pango: hack, Awesome 11
@@ -110,13 +110,12 @@ for_window [class="Conky"]               floating enable, border pixel 0
 for_window [class="zbar"]                floating enable, border pixel 1
 for_window [class="xfreerdp"]                floating enable, border pixel 1
 
-# assigns focus
-# assign [class="Connman-gtk"] $tag10
-# for_window [class="Connman-gtk"] focus
+# mouse warped to the center of window
+mouse_warping none
 
 # toggle workspace's display screen
-# bindsym $mod+- move workspace to output right
-# bindsym $mod+Shift+- move workspace to output up
+#bindsym $mod+- move workspace to output left
+#bindsym $mod+= move workspace to output right
 
 # switch to workspace
 bindsym Mod4+1 workspace 1
@@ -151,17 +150,6 @@ bindsym Mod4+Shift+7 move container to workspace 7
 bindsym Mod4+Shift+8 move container to workspace 8
 bindsym Mod4+Shift+9 move container to workspace 9
 bindsym Mod4+Shift+0 move container to workspace 10
-# bindsym Mod1+Shift+1 move container to workspace 1
-# bindsym Mod1+Shift+2 move container to workspace 2
-# bindsym Mod1+Shift+3 move container to workspace 3
-# bindsym Mod1+Shift+4 move container to workspace 4
-# bindsym Mod1+Shift+5 move container to workspace 5
-# bindsym Mod1+Shift+6 move container to workspace 6
-# bindsym Mod1+Shift+7 move container to workspace 7
-# bindsym Mod1+Shift+8 move container to workspace 8
-# bindsym Mod1+Shift+9 move container to workspace 9
-# bindsym Mod1+Shift+0 move container to workspace 10
-
 
 # reload the configuration file
 bindsym Mod4+Shift+c reload
@@ -214,9 +202,7 @@ exec_always --no-startup-id __launch_polybar
 exec_always --no-startup-id __launch_fcitx
 
 # local ss
-#exec_always --no-startup-id sslocal -c /etc/shadowsocks/vps.json
 exec_always --no-startup-id sslocal -c /etc/shadowsocks/vps6.json
-#exec_always --no-startup-id sslocal -c /etc/shadowsocks/pi.json
 
 # lock when sleep
 # exec --no-startup-id xss-lock -- betterlockscreen -l &
@@ -256,5 +242,4 @@ exec setterm -bleng 0
 exec "echo 'power on' | bluetoothctl"
 exec_always numlockx &
 exec_always __launch_conky
-# exec_always --no-startup-id mpd
-# exec_always xrandr --output eDP1 --right-of HDMI1 --auto && i3 restart
+#exec_always --no-startup-id mpd
