--- a/.asoundrc
+++ b/.asoundrc
@@ -1,3 +1,8 @@
-defaults.ctl.card 0
-defaults.pcm.card 0
-defaults.timer.card 0
+pcm.!default {
+    type hw
+    card 1
+    device 7
+}
+# defaults.ctl.card 0
+# defaults.pcm.card 0
+# defaults.timer.card 0
