--- a/.config/aria2/aria2.conf
+++ b/.config/aria2/aria2.conf
@@ -1,80 +1,135 @@
-#允许rpc
-enable-rpc=true
-#允许所有来源, web界面跨域权限需要
-rpc-allow-origin-all=true
-#允许非外部访问
-rpc-listen-all=true
-#RPC端口, 仅当默认端口被占用时修改
-#rpc-listen-port=6800
+#####################################################################
+## 文件保存相关
+#####################################################################
 
-#最大同时下载数(任务数), 路由建议值: 3
-max-concurrent-downloads=5
-#断点续传
+# 文件的保存路径(可使用绝对路径或相对路径), 默认: 当前启动位置
+dir=/home/angel/Downloads/aria2
+# 启用磁盘缓存, 0为禁用缓存, 需1.16以上版本, 默认:16M
+disk-cache=32M
+# 文件预分配方式, 能有效降低磁盘碎片, 默认:prealloc
+# 预分配所需时间: none < falloc ? trunc < prealloc
+# falloc和trunc则需要文件系统和内核支持
+# NTFS建议使用falloc, EXT3/4建议trunc, MAC 下需要注释此项
+file-allocation=falloc
+# 断点续传
 continue=true
-#同服务器连接数
-max-connection-per-server=24
-#最小文件分片大小, 下载线程数上限取决于能分出多少片, 对于小文件重要
+
+#####################################################################
+## 下载连接相关
+#####################################################################
+
+# 最大同时下载任务数, 运行时可修改, 默认:5
+max-concurrent-downloads=5
+# 同一服务器连接数, 添加时可指定, 默认:1
+max-connection-per-server=16
+# 最小文件分片大小, 添加时可指定, 取值范围1M -1024M, 默认:20M
+# 假定size=10M, 文件为20MiB 则使用两个来源下载; 文件为15MiB 则使用一个来源下载
 min-split-size=10M
-#单文件最大线程数, 路由建议值: 5
-split=32
-#下载速度限制
+# 单个任务最大线程数, 添加时可指定, 默认:5
+split=16
+# 整体下载速度限制, 运行时可修改, 默认:0
 max-overall-download-limit=0
-#单文件速度限制
+# 单个任务下载速度限制, 默认:0
 max-download-limit=0
-#上传速度限制
+# 整体上传速度限制, 运行时可修改, 默认:0
 max-overall-upload-limit=0
-#单文件速度限制
+# 单个任务上传速度限制, 默认:0
 max-upload-limit=0
-#断开速度过慢的连接
-lowest-speed-limit=1
-#验证用，需要1.16.1之后的release版本
-#referer=*
-
-#从会话文件中读取下载任务
-input-file=/home/angel/.config/aria2/aria2.session
-#在Aria2退出时保存`错误/未完成`的下载任务到会话文件
-save-session=/home/angel/.config/aria2/aria2.session
-#定时保存会话，需要1.16.1之后的release版
-#save-session-interval=60
-
-#文件保存路径, 默认为当前启动位置
-dir=/home/angel/Downloads
 # 禁用IPv6, 默认:false
 disable-ipv6=false
-#文件缓存, 使用内置的文件缓存, 如果你不相信Linux内核文件缓存和磁盘内置缓存时使用, 需要1.16及以上版本
-#disk-cache=0
-#另一种Linux文件缓存方式, 使用前确保您使用的内核支持此选项, 需要1.15及以上版本(?)
-#enable-mmap=true
-#文件预分配, 能有效降低文件碎片, 提高磁盘性能. 缺点是预分配时间较长
-#所需时间 none < falloc ? trunc << prealloc, falloc和trunc需要文件系统和内核支持
-file-allocation=prealloc
+# 连接超时时间, 默认:60
+timeout=60
+# 最大重试次数, 设置为0表示不限制重试次数, 默认:5
+max-tries=5
+# 设置重试等待的秒数, 默认:0
+retry-wait=0
 
-#启用本地节点查找
-bt-enable-lpd=true
-#添加额外的tracker
-#bt-tracker=<URI>,…
-#单种子最大连接数
-bt-max-peers=55
-#强制加密, 防迅雷必备
-#bt-require-crypto=true
-#当下载的文件是一个种子(以.torrent结尾)时, 自动下载BT
+
+#####################################################################
+## 进度保存相关
+#####################################################################
+
+# 从会话文件中读取下载任务
+input-file=/home/angel/.config/aria2/aria2.session
+# 在Aria2退出时保存`错误/未完成`的下载任务到会话文件
+save-session=/home/angel/.config/aria2/aria2.session
+# 定时保存会话, 0为退出时才保存, 需1.16.1以上版本, 默认:0
+save-session-interval=10
+# 自动保存任务进度，0为退出时才保存，默认：60
+auto-save-interval=10
+# 强制保存会话, 即使任务已经完成, 默认:false
+# 较新的版本开启后会在任务完成后依然保留.aria2文件
+force-save=true
+
+
+#####################################################################
+## RPC相关设置
+#####################################################################
+
+# 启用RPC, 默认:false
+enable-rpc=true
+# 允许所有来源, 默认:false
+rpc-allow-origin-all=true
+# 允许非外部访问, 默认:false
+rpc-listen-all=true
+# 事件轮询方式, 取值:[epoll, kqueue, port, poll, select], 不同系统默认值不同
+#event-poll=select
+# RPC监听端口, 端口被占用时可以修改, 默认:6800
+rpc-listen-port=6800
+# 设置的RPC授权令牌, v1.18.4新增功能, 取代 --rpc-user 和 --rpc-passwd 选项
+rpc-secret=KIWEWRWXYXPDVFQAKECS
+# 是否启用 RPC 服务的 SSL/TLS 加密,
+# 启用加密后 RPC 服务需要使用 https 或者 wss 协议连接
+#rpc-secure=true
+# 在 RPC 服务中启用 SSL/TLS 加密时的证书文件,
+# 使用 PEM 格式时，您必须通过 --rpc-private-key 指定私钥
+#rpc-certificate=/path/to/certificate.pem
+# 在 RPC 服务中启用 SSL/TLS 加密时的私钥文件
+#rpc-private-key=/path/to/certificate.key
+
+#####################################################################
+## BT/PT下载相关
+#####################################################################
+
+# 当下载的是一个种子(以.torrent结尾)时, 自动开始BT任务, 默认:true
 follow-torrent=true
-#BT监听端口, 当端口屏蔽时使用
-#listen-port=6881-6999
-
-#不确定是否需要，为保险起见，need more test
+# BT监听端口, 当端口被屏蔽时使用, 默认:6881-6999
+listen-port=52637
+# 单个种子最大连接数, 默认:55
+bt-max-peers=55
+# 打开DHT功能, PT需要禁用, 默认:true
 enable-dht=false
+# 打开IPv6 DHT功能, PT需要禁用
+enable-dht6=false
+# DHT网络监听端口, 默认:6881-6999
+#dht-listen-port=6881-6999
+# 本地节点查找, PT需要禁用, 默认:false
 bt-enable-lpd=false
+# 种子交换, PT需要禁用, 默认:true
 enable-peer-exchange=false
-#修改特征
-user-agent=uTorrent/2210(25130)
-peer-id-prefix=-UT2210-
-#修改做种设置, 允许做种
-seed-ratio=1
-#保存会话
-force-save=false
+# 每个种子限速, 对少种的PT很有用, 默认:50K
+#bt-request-peer-speed-limit=50K
+# 客户端伪装, PT需要
+peer-id-prefix=-TR2770-
+user-agent=Transmission/2.77
+peer-agent=Transmission/2.77
+# 当种子的分享率达到这个数时, 自动停止做种, 0为一直做种, 默认:1.0
+seed-ratio=0
+# BT校验相关, 默认:true
 bt-hash-check-seed=true
+# 继续之前的BT任务时, 无需再次校验, 默认:false
 bt-seed-unverified=true
+# 保存磁力链接元数据为种子文件(.torrent文件), 默认:false
 bt-save-metadata=true
-#定时保存会话，需要1.16.1之后的某个release版本（比如1.16.2）
-#save-session-interval=60
+# 统计当前活动下载任务时排除仅做种的任务. 
+# 但要知道, 在 RPC 方法中, 做种的任务仍然被认为是活动的下载任务.
+bt-detach-seed-only=true
+
+
+#####################################################################
+## 乱七八糟的选项
+#####################################################################
+# dns
+async-dns=false
+
+
