--- a/.config/aria2/aria2.conf
+++ b/.config/aria2/aria2.conf
@@ -118,7 +118,7 @@ seed-ratio=0
 # BT校验相关, 默认:true
 bt-hash-check-seed=true
 # 继续之前的BT任务时, 无需再次校验, 默认:false
-bt-seed-unverified=false
+bt-seed-unverified=true
 # 保存磁力链接元数据为种子文件(.torrent文件), 默认:false
 bt-save-metadata=true
 # 统计当前活动下载任务时排除仅做种的任务. 
