different bar for different monitor

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -226,8 +226,8 @@ exec_always --no-startup-id __launch_polybar
 exec_always --no-startup-id __launch_fcitx
 
 # local ss
-exec_always --no-startup-id sslocal -c /etc/shadowsocks/vps6.json
-exec_always --no-startup-id sslocal -c /etc/shadowsocks/pi.json
+# exec_always --no-startup-id sslocal -c /etc/shadowsocks/vps6.json
+# exec_always --no-startup-id sslocal -c /etc/shadowsocks/pi.json
 
 # lock when sleep
 # exec --no-startup-id xss-lock -- betterlockscreen -l &
@@ -270,3 +270,5 @@ exec_always numlockx &
 #exec_always --no-startup-id mpd
 exec --no-startup-id /opt/ddns.sh
 exec --no-startup-id aria2c --conf-path=/home/angel/.config/aria2/aria2.conf
+
+exec --no-startup-id clashy
