fix error in haskell.vim

--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -53,5 +53,7 @@
     "diagnostic.refreshOnInsertMode": false,
     "codeLens.enable": true,
     "tabnine.priority": 50,
-    "diagnostic.refreshAfterSave": true
+    "diagnostic.refreshAfterSave": true,
+    "diagnostic.maxWindowWidth": 120,
+    "diagnostic.maxWindowHeight": 1200
 }
